# lost-and-found

./: .dockerignore  .env.example  .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  Dockerfile  Dockerfile.prod  README.md  docker-compose.prod.yml  docker-compose.yml  init-data.sh  next.config.mjs  package-lock.json  package.json  prettier.config.cjs  tailwind.config.ts  tsconfig.json
.github/workflows/: article-deploy.yml  course-work-deploy.yml  deploy.yml
analyze/: nodejs.html
coures-work/: course-work.tex
course-work/: README.md  appendix-prisma-db.tex  course-work-0.tex  course-work-1.tex  course-work-2.tex  course-work-3.tex  course-work-4.tex  course-work-5.tex  course-work.tex  mirea-prog-lang.cls  mirea.cls  preambule.tex  titlepage.docx
course-work/article/: article1.tex  mirea-article.cls  preambule.tex
course-work/init/: .env.example  .gitignore  pyproject.toml  yandex-gpt-generation.ipynb
course-work/init/elsevier/: __init__.py
course-work/init/yagpt/: __init__.py
image-caption/: Dockerfile  app.py  requirements.txt
logging/: README.md
logging/cadvisor_and_prometheus/: README.md  docker-compose.yml
logging/promtail/: README.md  config.yml  docker-compose.yml
prisma/: schema.prisma
public/: manifest.json  robots.txt  service-worker.js  sw.js  sw.js.map  workbox-588899ac.js
src/: constants.mjs  constants.ts  env.mjs
src/components/: DefaultSkeleton.tsx  Error.tsx  InfiniteScrollGrid.tsx  Layout.tsx  logo.tsx  providers.tsx  sign-in.tsx  spinner.tsx  table-skeleton.tsx
src/lib/: campus.ts  constants.ts  format-date.ts  (+13 more)
(+254 files in other folders)
